<resources>
    <string name="app_name">FinMate</string>
    <string name="login_title">Welcome</string>
    <string name="user_hint">User Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email Id</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="profile_image">View User Profile</string>
    <string name="total_bal">Total Balance</string>
    <string name="monthly_expense">Monthly Expense</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="analysis">Analytics</string>
    <string name="add_expense">Add Expense</string>
    <string name="blogs">Blogs</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="budget">Budget</string>
    <string name="saving_goals">Saving Goals</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="income">Income</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="select_category">Select Category</string>
    <string name="select_account">Select Account</string>
    <string name="account">Account</string>
    <string name="go_to_previous_date">Go To Previous Date</string>
    <string name="go_to_next_date">Go TO Next Date</string>
    <string name="set_range">Set range</string>
    <string name="type_your_message">Type your message...</string>
    <string name="send">Send</string>
    <string name="set_monthly_budget">Set monthly\nbudget</string>
    <string name="budget_quote">Setting a budget reduces\nexpenditures about 10% on an\naverage.</string>
    <string name="budget_image">Budget Image</string>
    <string name="overall_nbudget">Overall\nbudget</string>
    <string name="set_now">Set now</string>
    <string name="category_wise_budget">Category wise budget</string>
    <string name="set_amount">Set amount</string>
    <string name="add_category">Add Category</string>
    <string name="set_budget">Set Budget</string>
    <string name="add_saving_goals">Add Saving Goals</string>
    <string name="enter_first_saving">Enter First Saving</string>
    <string name="add_saving_to_goal">Add Saving to Goal</string>

    <string-array name="filter_range">
        <item>Monthly</item>
        <item>Weekly</item>
        <item>Daily</item>
    </string-array>

</resources>