<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BudgetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/monthly_budget"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_monthly_budget"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_16ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:text="@string/budget_quote"/>

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/budget_bg4"
                android:contentDescription="@string/budget_image"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/monthly_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_category_wise">

            <ImageView
                android:id="@+id/budget_icon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/budget_icon2"
                android:layout_centerVertical="true"
                android:contentDescription="@string/budget"/>


            <TextView
                android:id="@+id/txt_overall_budget"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/budget_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overall_nbudget"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>

            <EditText
                android:id="@+id/monthly_budget_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/set_now"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:textColorHint="@color/dark_green"
                android:layout_alignParentEnd="true"
                android:autofillHints="0"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_category_wise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_wise_budget"
            app:layout_constraintTop_toBottomOf="@+id/monthly_budget"
            app:layout_constraintBottom_toTopOf="@+id/budget_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="@dimen/_10sdp"
            android:id="@+id/budget_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_category_wise"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/category_wise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_category_budget"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_category_budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budget_list"
            app:layout_constraintBottom_toTopOf="@+id/btn_set_budget"
            android:text="@string/add_category"
            android:textSize="@dimen/_12ssp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_budget"
            android:id="@+id/btn_set_budget"
            app:layout_constraintTop_toBottomOf="@id/btn_add_category_budget"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>