<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_saving_goals"
        android:id="@+id/txtTitle"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCategory"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/custom_edit_text2"
        android:drawableStart="@drawable/category_icon"
        android:drawablePadding="@dimen/_3sdp"
        android:drawableTint="@color/gray"
        android:focusable="false"
        android:ems="12"
        android:hint="@string/select_category"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edtAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtAmount"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/custom_edit_text2"
        android:drawableStart="@drawable/ruppee_icon"
        android:drawablePadding="@dimen/_3sdp"
        android:drawableTint="@color/gray"
        android:ems="12"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCategory"
        app:layout_constraintBottom_toTopOf="@+id/edtSaving"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSaving"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/custom_edit_text2"
        android:drawableStart="@drawable/ruppee_icon"
        android:drawablePadding="@dimen/_3sdp"
        android:drawableTint="@color/gray"
        android:ems="12"
        android:hint="@string/enter_first_saving"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAmount"
        app:layout_constraintBottom_toTopOf="@+id/edtDescription"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtDescription"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/custom_edit_text2"
        android:drawableStart="@drawable/description_icon"
        android:drawablePadding="@dimen/_3sdp"
        android:drawableTint="@color/gray"
        android:ems="12"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/btnAddGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSaving"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_transaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>