<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit_text"
                android:ems="14"
                android:hint="@string/user_hint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="@color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit_text"
                android:ems="14"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="@color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:background="@drawable/custom_edit_text"
                android:ems="14"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColorHint="@color/black"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/send_otp"
                android:textColor="@color/black"
                android:visibility="visible" />

            <com.chaos.view.PinView
                android:id="@+id/editTextOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/enter_otp"
                android:elevation="5dp"
                android:inputType="number"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="gone"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:itemSpacing="8dp"
                app:itemWidth="48dp"
                app:lineColor="@color/black" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonVerifyOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/verify_otp"
                android:textColor="@color/black"
                android:visibility="gone" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>