<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/gray"
        app:cardElevation="8dp"

        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/lLRow">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/user_profile" />

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/row_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"/>

            </LinearLayout>

            <TextView
                android:id="@+id/row_expense"
                android:layout_marginStart="@dimen/_90sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:layout_gravity="center"
                android:textColor="@color/red"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>