<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.AnalysisFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/income_button2"
                android:text="@string/income"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/expense_button2"
                android:text="@string/expense"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_type"
            app:layout_constraintBottom_toTopOf="@+id/pieChart">

            <ImageView
                android:id="@+id/calendarIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/set_range"
                android:src="@drawable/calender_icon"
                app:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/range_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/calendarIcon"
                android:entries="@array/filter_range"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_55sdp"
                android:layout_toEndOf="@+id/range_spinner"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/previousDate"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/go_to_previous_date"
                    android:rotation="180"
                    android:src="@drawable/next_icon" />

                <TextView
                    android:id="@+id/currentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/nextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:contentDescription="@string/go_to_next_date"
                    android:src="@drawable/next_icon" />

            </LinearLayout>

        </RelativeLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:padding="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recyclerExpense"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:paddingStart="@dimen/_16sdp"-->
<!--            android:paddingEnd="@dimen/_16sdp"-->
<!--            android:paddingBottom="@dimen/_16sdp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/pieChart"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            tools:listitem="@layout/display_transaction_row" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>