<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#DBA7E7"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/category"
                android:src="@drawable/user_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/row_category"
                android:background="@drawable/circle_background"
                android:padding="@dimen/_4sdp"
                app:tint="@color/white" />


            <TextView
                android:id="@+id/row_category"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/row_note"
                app:layout_constraintStart_toEndOf="@+id/imgCategory"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/row_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/account"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgCategory"
                app:layout_constraintTop_toBottomOf="@+id/row_category" />

            <TextView
                android:id="@+id/row_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/row_account"
                app:layout_constraintTop_toBottomOf="@+id/row_category" />


            <TextView
                android:id="@+id/row_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/amount"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>